<resources>
    <string name="app_name">Swahili Language Application</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logintext_key">Bright Langauge Learning</string>
    <string name="username">username</string>
    <string name="passwprd">password</string>
    <string name="show_password">show password</string>
    <string name="login_button">login</string>
    <string name="sign_up">Don\'t have account? Sign up.</string>
</resources>