<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="#1976D2"
    android:backgroundTint="#D80288D1"
    android:orientation="vertical"
    tools:context="com.example.languageapp.RegisterActivity">

    <LinearLayout
        android:id="@+id/rlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#D80288D1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:backgroundTint="#CE1976D2"
            android:text="@string/logintext_key"
            android:textAlignment="center"
            android:textColor="#F4F1F1"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/luser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/etstyle"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/lpass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/etstyle"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/passwprd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/showPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FDF6F6"
            android:buttonTint="#FFFFFF"
            android:paddingLeft="8dp"
            android:text="@string/show_password"
            android:textColor="#FAFAFA"
            android:textSize="15dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btnstylesel"
            android:backgroundTint="#C61976D2"
            android:clickable="true"
            android:text="@string/login_button"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/rlay"
        android:backgroundTint="#EDE2E2"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textline"
            android:backgroundTint="#12243E"
            android:text="                                                                                                              "
            android:textAlignment="center" />


        <TextView
            android:id="@+id/regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#AE1976D2"
            android:clickable="true"
            android:paddingTop="8dp"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
